--- a/confess-crush-main/css/style.css
+++ b/confess-crush-main/css/style.css
@@ -25,11 +25,11 @@
     right: 0;
     bottom: 0;
     left: 0;
-    opacity: .8;
-    /* height: 100vh; */
+    opacity: 1;
+     height: 100vh;
     z-index: 0;
     background-repeat: no-repeat;
-    background-image: url(../img/bg.webp);
+    /*background-image: url(../img/bg.webp);*/
     background-size: cover;
     background-position: 50%;
     -webkit-filter: blur(4px);
@@ -50,7 +50,7 @@
 
 header h2 {
     font-family: 'Pacifico';
-    font-size: 50px;
+    font-size: 55px;
     text-align: center;
     margin-bottom: 30px;
     color: cyan;
@@ -96,4 +96,13 @@ header h4 {
 
 .swal2-backdrop-show {
     background-size: 200px 100px !important;
+}
+
+video {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    object-fit: cover;
 }
